--- a/ADOT4J4A/res/values/strings.xml
+++ b/ADOT4J4A/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, ADOT4J4AActivity!</string>
     <string name="app_name">ADOT4J4A</string>
+    <string name="hint_update_status">What\'s Happening?</string>
+    <string name="tweet">Tweet</string>
 
 </resources>
